# lpg-ai

./: .gitignore  Makefile  README.md  deploy.sh  package-lock.json  pyproject.toml  restart.sh  setup.sh  test.txt
.github/workflows/: ci.yml
backend/: .coverage.MacBook-Air.local.53656.XuQxviux  .coverage.MacBook-Air.local.77402.XrozlOyx  .env  .env.example  .env.production  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
backend/app/: __init__.py  config.py  dependencies.py  generator.py  ingest.py  main.py  pipeline.py  progress.py  schema.py  setup.py  vectorstore.py
backend/tests/: conftest.py  test_chroma_persistence.py  utils.py
backend/tests/integration/: test_api_integration.py  test_documents_integration.py  test_files_integration.py  test_ingest_integration.py  test_pipeline_integration.py  test_query_end_to_end.py
backend/tests/unit/: test_api.py  test_config.py  test_documents.py  test_files_endpoint.py  test_generator.py  test_ingest.py  test_pipeline.py  test_query_endpoint.py  test_schema.py  test_vectorstore.py
frontend/: .env.example  .env.production  README.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  config.ts  main.tsx  setupTests.ts  test-utils.ts  theme.ts
frontend/src/__mocks__/: config.ts  vite-env.d.ts
frontend/src/__tests__/: Sidebar.test.tsx
frontend/src/api/: client.ts
frontend/src/assets/: view-logo.html
frontend/src/components/: Chat.tsx  ChatHistory.test.tsx  ChatHistory.tsx  Documents.tsx  EnvStatus.tsx  FileManager.test.tsx  FileManager.tsx  Ingest.tsx  Query.tsx  Sidebar.tsx  test-utils.tsx
frontend/src/components/__tests__/: Chat.test.tsx  EnvStatus.test.tsx  FileManager.test.tsx
frontend/src/styles/: layout.ts  theme.ts
frontend/src/types/: api.ts
my-rag-app/: .gitignore  Makefile  README.md  docker-compose.yml
my-rag-app/.github/workflows/: ci.yml
my-rag-app/backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
my-rag-app/backend/app/: __init__.py  config.py  main.py  pipeline.py  schema.py  vectorstores.py
my-rag-app/backend/tests/integration/: test_api_integration.py  test_pipeline.py  test_pipeline_integration.py
my-rag-app/backend/tests/unit/: test_config.py  test_main.py  test_pipeline.py  test_vectorstores.py
